# Colophon

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: cli.md
src/colophon/: __init__.py  __main__.py  build.py  cli.py  collections.py  content.py  core.py  errors.py  expressions.py  images.py  markdown.py  mastodon.py  models.py  project.py  render.py  scaffold.py  serve.py  utils.py  vendor.py
src/colophon/deploy/: __init__.py  config.py  mastodon.py  pipeline.py  transports.py
src/colophon/scaffold_files/: README.md
src/colophon/scaffold_files/content/: images.yml  post-sidebar.yml  site.yaml
src/colophon/scaffold_files/content/pages/: template-variables.md
src/colophon/scaffold_files/templates/: feed.xml  post.html  simple.html  tag.html
src/colophon/scaffold_templates/default/: colophon.yml  site_hooks.py
src/colophon/scaffold_templates/default/content/: deploy.example.yaml  index.yml  site.yaml
src/colophon/scaffold_templates/default/content/images/: README.md  demo.ppm
src/colophon/scaffold_templates/default/content/pages/: about.md  deploy.md  features.yml  hooks.md  images.md
src/colophon/scaffold_templates/default/static/: styles.css
src/colophon/scaffold_templates/default/templates/: archive.html  base.html  index.html
tests/: colophon_test_api.py  test_core.py  test_package.py
tests/fixtures/templates/: _content_image.html  _placeholder.html  archive.html  base.html  feed.xml  index.html  post.html  simple.html  tag.html
(+2 files in other folders)
